# save_intervue_browser

./: .gitignore  README.md  package-lock.json  package.json
backend/: CMakeLists.txt  Dockerfile  README.md  backend.py  domain_tasks_generator.py  generation.py  hr_users.db  requirements.txt  tokenn.py
backend/src/: main.cpp
backend/tests/: basic_tests.cpp
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/api/: hrAuthApi.js  interviewApi.js
frontend/src/components/auth/: HrLoginForm.jsx  HrRegisterForm.jsx
frontend/src/components/layout/: Footer.jsx  Navbar.jsx
frontend/src/components/session/: TokenInputModal.jsx
frontend/src/components/ui/: Button.jsx  Container.jsx  Modal.jsx  Section.jsx
frontend/src/layouts/: RootLayout.jsx  SessionLayout.jsx
frontend/src/pages/Demo/: DemoInterviewPage.jsx  DemoReportPage.jsx  DemoStartPage.jsx
frontend/src/pages/Hr/: HrWorkshopPage.jsx
frontend/src/pages/Landing/: LandingPage.jsx
frontend/src/pages/NotFound/: NotFoundPage.jsx
frontend/src/pages/Session/: SessionConsentPage.jsx  SessionDeclinedPage.jsx  SessionInterviewPage.jsx  SessionReportPage.jsx
frontend/src/router/: index.jsx
frontend/src/styles/: global.css  normalize.css  reset.css
frontend/src/utils/: hrAuth.js  token.js  useAntiCheat.js
